[package]
name = "bevy-keygrip"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0-rc.3", default-features = false, features = [
    "bevy_core_pipeline",
] }

bevy_third_person_camera = { git = "https://github.com/KyWinston/bevy_third_person_camera", branch = "migration-15", optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
bevy = { version = "0.15.0-rc.3", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_gizmos",
    "tonemapping_luts",
] }
bevy-inspector-egui = "0.26.0"

[features]
third_person = ["bevy_third_person_camera"]

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.15.0-rc.3"
features = ["x11", "wayland", "bevy_winit"]
default-features = false
