[package]
name = "bevy-keygrip"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_core_pipeline",
] }

bevy_third_person_camera = { git = "https://github.com/KyWinston/bevy_third_person_camera", branch = "migration-15", optional = true }
cfg-if = "1.0.0"
bevy-inspector-egui = { version = "0.30.0", optional = true }


[dev-dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_core_pipeline",
    "tonemapping_luts",
] }

[features]
third_person = ["dep:bevy_third_person_camera"]
debug = ["bevy/bevy_gizmos", "dep:bevy-inspector-egui"]

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.15.3"
features = ["x11", "wayland", "bevy_winit"]
default-features = false


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 16
